se agrega pantalla para print query

--- a/webapp/view/Object.view.xml
+++ b/webapp/view/Object.view.xml
@@ -80,8 +80,7 @@
 							</form:SimpleForm>	
                             <form:SimpleForm editable="true"   adjustLabelSpan="true"  singleContainerFullSize="true">
                                 <form:content>
-                                    <m:Button text="{i18n>printQuery}" icon="sap-icon://print" type="Emphasized" iconFirst="true" width="50%" enabled="true" visible="true" iconDensityAware="false" press="_onButtonPress1"/>
-                                </form:content>
+                                    <m:Button text="{i18n>printQuery}" icon="sap-icon://print" type="Emphasized" iconFirst="true" width="50%" enabled="true" visible="true" iconDensityAware="false" press="_onGetQueryPrint"/>                                </form:content>
                             </form:SimpleForm>
 						</layout:BlockLayoutCell>
                         
