--- a/webapp/view/Worklist.view.xml
+++ b/webapp/view/Worklist.view.xml
@@ -33,7 +33,7 @@
 										<MultiInput id="help_Div" width="40%" required="true"  showValueHelp="true" valueHelpOnly="true"  valueStateText="Campo requerido" liveChange="onLiveTextChange" valueHelpRequest="handleSelectSegmento"/>
 										
 										<Label text="{i18n>Caja}"  width="100%" required="true" textAlign="Begin" textDirection="Inherit" visible="true"/>
-										<MultiInput id="help_Caja" width="40%" required="true"  showValueHelp="true" valueHelpOnly="false"  valueStateText="Campo requerido" liveChange="onLiveTextChange" valueHelpRequest="handleSelectCaja"/>
+										<MultiInput id="help_Caja" width="40%" required="true"  showValueHelp="true" valueHelpOnly="true"  valueStateText="Campo requerido" liveChange="onLiveTextChange" valueHelpRequest="handleSelectCaja"/>
 
                                         <Label text="{i18n>User}"  width="100%" required="true" textAlign="Begin" textDirection="Inherit" visible="true"/>
 										<Input id="idUser"  required="true" width="40%" textAlign="Begin" textDirection="Inherit" visible="true" valueStateText="Campo requerido" liveChange="onLiveTextChange"/>
