--- a/webapp/view/Worklist.view.xml
+++ b/webapp/view/Worklist.view.xml
@@ -27,13 +27,13 @@
 								<layout:content>
 									<form:SimpleForm id="formularioId01" editable="true" layout="ResponsiveGridLayout" labelSpanXL="4"  labelSpanM="4" title="{i18n>AdmonCaja}" labelSpanS="4" adjustLabelSpan="false" columnsXL="2"  columnsM="2" >
 										<Label text="{i18n>Sociedad}"  width="100%" required="true"   />
-										<MultiInput id="help_Society" width="40%" required="true"  showValueHelp="true" valueHelpOnly="true"  valueStateText="Campo requerido" liveChange="onLiveTextChange" valueHelpRequest="handleSelectSociety" />
+										<MultiInput id="help_Society" width="40%" required="true"  showValueHelp="true" valueHelpOnly="false"  valueStateText="Campo requerido" liveChange="onLiveTextChange" valueHelpRequest="handleSelectSociety" />
 										
 										<Label text="{i18n>Div}"  width="100%" required="true" textAlign="Begin" textDirection="Inherit" visible="true"/>
-										<MultiInput id="help_Div" width="40%" required="true"  showValueHelp="true" valueHelpOnly="true"  valueStateText="Campo requerido" liveChange="onLiveTextChange" valueHelpRequest="handleSelectSegmento"/>
+										<MultiInput id="help_Div" width="40%" required="true"  showValueHelp="true" valueHelpOnly="false"  valueStateText="Campo requerido" liveChange="onLiveTextChange" valueHelpRequest="handleSelectSegmento"/>
 										
 										<Label text="{i18n>Caja}"  width="100%" required="true" textAlign="Begin" textDirection="Inherit" visible="true"/>
-										<MultiInput id="help_Caja" width="40%" required="true"  showValueHelp="true" valueHelpOnly="true"  valueStateText="Campo requerido" liveChange="onLiveTextChange" valueHelpRequest="handleSelectCaja"/>
+										<MultiInput id="help_Caja" width="40%" required="true"  showValueHelp="true" valueHelpOnly="false"  valueStateText="Campo requerido" liveChange="onLiveTextChange" valueHelpRequest="handleSelectCaja"/>
 
                                         <Label text="{i18n>User}"  width="100%" required="true" textAlign="Begin" textDirection="Inherit" visible="true"/>
 										<Input id="idUser"  required="true" width="40%" textAlign="Begin" textDirection="Inherit" visible="true" valueStateText="Campo requerido" liveChange="onLiveTextChange"/>
