--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,5 +1,5 @@
 <mvc:View
-    controllerName="NAMESPACE.zcashclose.controller.App"
+    controllerName="GASS.zcashclose.controller.App"
     displayBlock="true"
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc">
