--- a/webapp/view/ObjectNotFound.view.xml
+++ b/webapp/view/ObjectNotFound.view.xml
@@ -1,5 +1,5 @@
 <mvc:View
-    controllerName="NAMESPACE.zcashclose.controller.NotFound"
+    controllerName="GASS.zcashclose.controller.NotFound"
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc">
 
