--- a/webapp/view/QueryPrinter.view.xml
+++ b/webapp/view/QueryPrinter.view.xml
@@ -16,7 +16,7 @@
 				<layout:content>
 					<layout:BlockLayoutRow  scrollable="false"  title="Detalle de Saldos">
 						<layout:BlockLayoutCell   backgroundColorSet="ColorSet6" backgroundColorShade="ShadeD" >
-							<t:Table id="tblMovimientos" rows="{ path: 'MovimientosModel>/', sorter: { path: 'Indice', descending: true } }" selectionMode="None"
+							<t:Table id="tblMovimientos" rows="{ path: 'MovimientosModel>/' }" selectionMode="None"
 								rowActionCount="1" class="sapUiTinyMarginBottom" rowSelectionChange=".onPress" visibleRowCount="10"
 								ariaLabelledBy="title">
 								<t:extension>
@@ -29,6 +29,9 @@
 										<Button press="downloadExcel" id="btnNoStockDownloadExcel" icon="sap-icon://excel-attachment" tooltip="{i18n>btnExcel}" type="Accept"/>
 									</OverflowToolbar>
 								</t:extension>
+								<t:rowSettingsTemplate>
+									<t:RowSettings highlight="{MovimientosModel>Status}" />
+								</t:rowSettingsTemplate>
 								<t:columns>
 									<t:Column sortProperty="Usuario" filterProperty="Usuario" width="8rem">
 										<Label text="{i18n>Usuario}"/>
@@ -131,6 +134,13 @@
 										</t:template>
 									</t:Column>
 								</t:columns>
+								<t:footer>
+									<OverflowToolbar id="IdTotal">
+										<Label design="Bold" text="{i18n>Totales}"/>
+										<ToolbarSpacer width="60%"/>
+										<Text id="TotalMocements" design="Bold" text="{path: 'MovimientosModel>/0/SumTotal',type: 'sap.ui.model.type.Float', formatOptions: { maxFractionDigits : 2, minFractionDigits: 0, groupingSeparator: ',', decimalSeparator: '.', groupingEnabled: true }} " wrapping="false"/>
+									</OverflowToolbar>
+								</t:footer>
 							</t:Table>
 						</layout:BlockLayoutCell>
 					</layout:BlockLayoutRow>	
