--- a/webapp/view/Object.view.xml
+++ b/webapp/view/Object.view.xml
@@ -85,7 +85,7 @@
 						</layout:BlockLayoutCell>
                         
 						<layout:BlockLayoutCell width="70%"  backgroundColorSet="ColorSet7" backgroundColorShade="ShadeE" >
-							<t:Table id="tableSaldos" rows="{ path: 'cajaModel>/0/NavIngresos/results', sorter: { path: 'Vin', descending: true } }" selectionMode="None"
+							<t:Table id="tableSaldos" rows="{ path: 'cajaModel>/0/NavIngresos/results', sorter: { path: 'Vin', ascending: true } }" selectionMode="None"
 								 class="sapUiTinyMarginBottom" visibleRowCount="5"
 								ariaLabelledBy="title">
 								<t:extension>
@@ -158,7 +158,7 @@
 					</layout:BlockLayoutRow>
 					<layout:BlockLayoutRow scrollable="false">
 						<layout:BlockLayoutCell   backgroundColorSet="ColorSet7" backgroundColorShade="ShadeE" >
-							<t:Table id="table" rows="{ path: 'cajaModel>/0/NavMovimientos/results', sorter: { path: 'Indice', descending: true } }" selectionMode="None"
+							<t:Table id="table" rows="{ path: 'cajaModel>/0/NavMovimientos/results', sorter: { path: 'Indice', ascending: true } }" selectionMode="None"
 								rowActionCount="1" class="sapUiTinyMarginBottom" rowSelectionChange=".onPress" visibleRowCount="5"
 								ariaLabelledBy="title">
 								
